--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,202 +1,201 @@
-absl-py==1.4.0
-aiohttp==3.8.4
-aiosignal==1.3.1
-alembic==1.12.0
-altair==5.2.0
-amqp==5.1.1
-annotated-types==0.6.0
-asgiref==3.7.2
-astunparse==1.6.3
-async-generator==1.10
-async-timeout==4.0.2
-asynctest==0.13.0
-attrs==20.3.0
-bcrypt==4.0.1
-beautifulsoup4==4.12.0
-bidict==0.22.1
-billiard==4.1.0
-black==23.3.0
-blinker==1.6.2
-bs4==0.0.1
-cachelib==0.9.0
-cachetools==5.3.0
-celery==5.3.4
-certifi==2022.12.7
-cffi==1.15.1
-cfgv==3.3.1
-chardet==5.1.0
-charset-normalizer==3.1.0
-check50==3.3.11
-checksumdir==1.2.0
-click==8.1.3
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-colorama==0.4.6
-configparser==5.3.0
-contourpy==1.0.7
-coverage==7.2.3
-cowsay==6.1
-cryptography==41.0.7
-cssselect==1.2.0
-cycler==0.11.0
-distlib==0.3.7
-Django==4.2.5
-dnspython==2.2.1
-docker==6.0.1
-duckduckgo-search==2.8.6
-email-validator==1.3.0
-eventlet==0.33.3
-exceptiongroup==1.1.1
-filelock==3.12.4
-flake8==6.0.0
-Flask==2.2.2
-Flask-Bcrypt==1.0.1
-Flask-Caching==2.1.0
-Flask-Cors==4.0.0
-Flask-JWT-Extended==4.5.2
-Flask-Login==0.6.2
-Flask-Mail==0.9.1
-Flask-Principal==0.4.0
-Flask-Reuploaded==1.2.0
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==1.0.1
-flatbuffers==23.5.26
-fonttools==4.39.3
-frozenlist==1.3.3
-fxcmpy==1.3.3
-gast==0.4.0
-gitdb==4.0.10
-GitPython==3.1.31
-google-api-core==2.11.0
-google-api-python-client==2.86.0
-google-auth==2.17.3
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-googleapis-common-protos==1.59.0
-greenlet==2.0.1
-grpcio==1.57.0
-gTTS==2.3.1
-gunicorn==22.0.0
-h11==0.14.0
-h5py==3.9.0
-httplib2==0.22.0
-identify==2.5.22
-idna==3.4
-importlib-metadata==6.11.0
-inflect==7.0.0
-iniconfig==2.0.0
-isort==5.12.0
-itsdangerous==2.1.2
-jellyfish==0.11.2
-Jinja2==3.1.2
-jsonschema==4.17.3
-kiwisolver==1.4.4
-kombu==5.3.2
-lib50==3.0.10
-libclang==16.0.6
-loguru==0.7.0
-lxml==4.9.2
-Mako==1.2.4
-Markdown==3.4.4
-markdown-it-py==3.0.0
-MarkupSafe==2.1.1
-matplotlib==3.7.1
-mccabe==0.7.0
-mdurl==0.1.2
-multidict==6.0.4
-mypy-extensions==1.0.0
-nodeenv==1.7.0
-npm==0.1.1
-oauthlib==3.2.2
-opt-einsum==3.3.0
-optional-django==0.1.0
-orjson==3.8.10
-outcome==1.2.0
-packaging==23.0
-pathspec==0.11.1
-pexpect==4.9.0
-pipenv==2023.9.8
-platformdirs==3.10.0
-pre-commit==3.2.2
-prompt-toolkit==3.0.39
-protobuf==4.22.3
-ptyprocess==0.7.0
-py-cpuinfo==9.0.0
-pyarrow==14.0.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.10.0
-pycparser==2.21
-pydantic==2.6.0
-pydantic_core==2.16.1
-pydeck==0.8.1b0
-Pygments==2.17.2
-PyJWT==2.8.0
-pyparsing==3.0.9
-pyrsistent==0.19.3
-PySocks==1.7.1
-pytest==7.3.1
-pytest-asyncio==0.21.0
-pytest-benchmark==4.0.0
-pytest-cov==4.0.0
-pytest-integration==0.2.3
-pytest-mock==3.10.0
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-engineio==4.3.1
-python-socketio==5.0.4
-pytz==2023.3
-pywin32==306
-PyYAML==6.0.1
-readability-lxml==0.8.1
-redis==4.5.4
-regex==2023.3.23
-requests==2.28.2
-requests-oauthlib==1.3.1
-rich==13.7.0
-rsa==4.9
-six==1.16.0
-smmap==5.0.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.4
-sourcery==1.2.0
-SQLAlchemy==1.4.44
-SQLAlchemy-ImageAttach==1.1.0
-sqlparse==0.4.4
-streamlit==1.29.0
-tenacity==8.2.3
-termcolor==1.1.0
-tiktoken==0.3.3
-toml==0.10.2
-toolz==0.12.0
-tornado==6.4
-tqdm==4.65.0
-trio==0.22.0
-trio-websocket==0.10.2
-tweepy==4.13.0
-typing_extensions==4.9.0
-tzdata==2023.3
-tzlocal==5.2
-uritemplate==4.1.1
-urllib3==1.26.15
-uuid==1.30
-validators==0.22.0
-vine==5.0.0
-virtualenv==20.24.5
-vue==0.0.1
-Wand==0.6.10
-watchdog==3.0.0
-wcwidth==0.2.9
-webdriver-manager==3.8.6
-websocket-client==1.5.1
-Werkzeug==2.2.2
-win32-setctime==1.1.0
-wrapt==1.15.0
-wsproto==1.2.0
-WTForms==3.0.1
-yarl==1.8.2
-zipp==3.17.0
+absl-py
+aiohttp
+aiosignal
+alembic
+altair
+amqp
+annotated-types
+asgiref
+astunparse
+async-generator
+async-timeout
+asynctest
+attrs
+bcrypt
+beautifulsoup4
+bidict
+billiard
+black
+blinker
+bs4
+cachelib
+cachetools
+celery
+certifi
+cffi
+cfgv
+chardet
+charset-normalizer
+check50
+checksumdir
+click
+click-didyoumean
+click-plugins
+click-repl
+colorama
+configparser
+contourpy
+coverage
+cowsay
+cryptography
+cssselect
+cycler
+distlib
+Django
+dnspython
+docker
+duckduckgo-search
+email-validator
+eventlet
+exceptiongroup
+filelock
+flake8
+Flask
+Flask-Bcrypt
+Flask-Caching
+Flask-Cors
+Flask-JWT-Extended
+Flask-Login
+Flask-Mail
+Flask-Principal
+Flask-Reuploaded
+Flask-SQLAlchemy
+Flask-WTF
+flatbuffers
+fonttools
+frozenlist
+fxcmpy
+gast
+gitdb
+GitPython
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-auth-oauthlib
+google-pasta
+googleapis-common-protos
+greenlet
+grpcio
+gTTS
 gunicorn
+h11
+h5py
+httplib2
+identify
+idna
+importlib-metadata
+inflect
+iniconfig
+isort
+itsdangerous
+jellyfish
+Jinja2
+jsonschema
+kiwisolver
+kombu
+lib50
+libclang
+loguru
+lxml
+Mako
+Markdown
+markdown-it-py
+MarkupSafe
+matplotlib
+mccabe
+mdurl
+multidict
+mypy-extensions
+nodeenv
+npm
+oauthlib
+opt-einsum
+optional-django
+orjson
+outcome
+packaging
+pathspec
+pexpect
+pipenv
+platformdirs
+pre-commit
+prompt-toolkit
+protobuf
+ptyprocess
+py-cpuinfo
+pyarrow
+pyasn1
+pyasn1-modules
+pycodestyle
+pycparser
+pydantic
+pydantic_core
+pydeck
+Pygments
+PyJWT
+pyparsing
+pyrsistent
+PySocks
+pytest
+pytest-asyncio
+pytest-benchmark
+pytest-cov
+pytest-integration
+pytest-mock
+python-dateutil
+python-dotenv
+python-engineio
+python-socketio
+pytz
+pywin32
+PyYAML
+readability-lxml
+redis
+regex
+requests
+requests-oauthlib
+rich
+rsa
+six
+smmap
+sniffio
+sortedcontainers
+soupsieve
+sourcery
+SQLAlchemy
+SQLAlchemy-ImageAttach
+sqlparse
+streamlit
+tenacity
+termcolor
+tiktoken
+toml
+toolz
+tornado
+tqdm
+trio
+trio-websocket
+tweepy
+typing_extensions
+tzdata
+tzlocal
+uritemplate
+urllib3
+uuid
+validators
+vine
+virtualenv
+vue
+Wand
+watchdog
+wcwidth
+webdriver-manager
+websocket-client
+Werkzeug
+win32-setctime
+wrapt
+wsproto
+WTForms
+yarl
+zipp
